Code overflow fix.

--- a/blog/blogstyle.css
+++ b/blog/blogstyle.css
@@ -49,7 +49,8 @@ div.code {
   background-color: LightGray;
   padding-left: 20px;
   padding-right: 20px;
-  word-wrap: break-word;
+  overflow-y: scroll;
+  overflow-x: auto;
 }
 
 code {
@@ -109,6 +110,8 @@ a:hover {
 
 div.code {
   background-color: LightGray;
+  overflow-y: scroll;
+  overflow-x: auto;
 }
 
 code {
